# ResilioCompanion

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Readme.md  pyproject.toml
resilio_companion/api/: __init__.py
resilio_companion/tools/: __init__.py  sync_ignore.py
resilio_companion/utils/: ignore.py
tests/: test_ignore.py
